--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -136,7 +136,7 @@ footer{
   left: 0;
     display: grid;
     grid-template-columns: repeat(4, 50px);
-    gap: 1.5rem;
+    gap: 40px;
     place-content: center;
 #high{
     color: #fff;
